[package]
name = "lq"
description = "low overhead yq/tq/... implementation"
authors = [
    "clux <sszynrae@gmail.com>",
]
version = "0.12.2"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/clux/lq"
edition = "2021"
rust-version = "1.76.0"
categories = ["command-line-utilities", "parsing"]


[[bin]]
doc = false
name = "lq"
path = "lq.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
serde_json = "1.0.115"
toml = { version = "0.8.12", features = ["display"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
kdl = "4.6.0"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
debug = 0
#strip = "symbols"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/lq-{ target }{ archive-suffix }"
bin-dir = "lq-{ target }/{ bin }{ format }"
